Closed
Bug 1264892
Opened 9 years ago
Closed 9 years ago
B2GOS: gecko/media/libcubeb/src/cubeb_opensl.c:194:1: error: static declaration of '__system_property_get' follows non-static declaration
Categories
(Core :: Audio/Video: cubeb, defect)
Core
Audio/Video: cubeb
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: gwagner, Assigned: tzimmermann)
References
Details
Attachments
(1 file)
|
765 bytes,
patch
|
padenot
:
review+
|
Details | Diff | Splinter Review |
Our Emulator L builds are broken.
15:39:45 ERROR - ../../../../../workspace/gecko/media/libcubeb/src/cubeb_opensl.c:194:1: error: static declaration of '__system_property_get' follows non-static declaration
15:39:45 INFO - __system_property_get(const char* name, char* value)
15:39:45 INFO - ^
15:39:45 INFO - In file included from ../../../config/system_wrappers/sys/system_properties.h:3:0,
15:39:45 INFO - from ../../../../../workspace/gecko/media/libcubeb/src/cubeb_opensl.c:17:
15:39:45 INFO - /home/worker/workspace/B2G/bionic/libc/include/sys/system_properties.h:47:5: note: previous declaration of '__system_property_get' was here
15:39:45 INFO - int __system_property_get(const char *name, char *value);
15:39:45 INFO - ^
15:39:45 ERROR - make[6]: *** [cubeb_opensl.o] Error 1
15:39:45 INFO - make[6]: Leaving directory `/home/worker/objdir-gecko/objdir/media/libcubeb/src'
15:39:45 ERROR - make[5]: *** [media/libcubeb/src/target] Error 2
| Reporter | ||
Updated•9 years ago
|
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → tzimmermann
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•9 years ago
|
||
Fallout from bug 1264594. libcubeb implements interfaces that are already present on B2G. AFAICT the re-implemented code is only required when building with an NDK.
Attachment #8741740 -
Flags: review?(padenot)
Comment 2•9 years ago
|
||
Comment on attachment 8741740 [details] [diff] [review]
[01] Bug 1264892: Use system declaration of |__system_property_get| on B2G
Review of attachment 8741740 [details] [diff] [review]:
-----------------------------------------------------------------
Can you upstream this to http://github.com/kinetiknz/cubeb ? We'll then import the code into gecko.
::: media/libcubeb/src/cubeb_opensl.c
@@ +189,3 @@
> #if defined(__ANDROID__)
>
> +// B2G header file still contain the required function declarations.
s/contain/contains/
Attachment #8741740 -
Flags: review?(padenot) → review+
| Assignee | ||
Comment 4•9 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=fa0b7eb8c907
I'll also send the patch to upstream.
| Assignee | ||
Comment 5•9 years ago
|
||
Pull request for cubeb: https://github.com/kinetiknz/cubeb/pull/99
Comment 6•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•