Bug 1264892: Use system declaration of |__system_property_get| on B2G, r=padenot